# curso_python

./: LICENSE  README.md  pyproject.toml  sync-docs  sync-docs.bat
bases/: base_met.xlsx  datos_dx.csv
docs/: .buildinfo  Tema 1 - generalidades.md  _config.yml  bibliografia.html  formulario.html  genindex.html  glosario.html  index.html  index.md  intro.html  objects.inv  recursos.html  referencias.html  search.html  searchindex.js  tema1-generalidades.md  tema2-como_correr_python.md
docs/Otras lecciones/: f-strings.html  index.html
docs/Recursos/: glosario.html  index.html
docs/Unidad 1/: _tema2-como_correr_python.md  index.html  index.md  libreta 1 - primera libreta.html  tema 1 - preparación.html  tema 1 - preparación.md  tema 2 - generalidades.md  tema 3 - opciones de trabajo.html  tema 3 - opciones para trabajar.html  tema 3 - opciones para trajabar.md  tema 4 - jupyter.html  tema 4 - primera libreta.html  tema 5 - primera libreta.html  tema 6 - conclusión.html
docs/Unidad 2/: index.html  tema 10 - control de flujo.html  tema 7 - variables.html  tema 8 - tipos de datos.html  tema 9 - operaciones lógicas.html
docs/Unidad 3/: index.html  tema 10 - control de flujo.html  tema 11 - funciones.html  tema 12 - librerías.html  tema 13 - calculadora.html  tema 13 - demo.html
docs/Unidad 4/: index.html  tema 14 - manejo de datos tabulados.html  tema 15 - palmer penguins.html  tema 16 - descriptivos básicos.html
docs/_sources/: bibliografia.md  glosario.md  intro.md  recursos.md  referencias.md
docs/ejercicios/: edad-en-rango.html  imc.html  index.html  muestreo-aleatorio.html  n-a-palabra.html  pares.html  parsing.html  (+1 more)
docs_raw/: _config.yml  _toc.yml  formulario.md  glosario.md  index.md  intro.md  recursos.md  references.bib  referencias.md  requirements.txt
jtd_docs/: _config.yml
lecturas/: Tema 1 - generalidades.md  index.md
libretas/: Tutorial 0 - Hola Mundo.ipynb  Tutorial 1_ Analisis inicial de datos.ipynb  Tutorial 2_ Operaciones con arreglos de datos.ipynb  Tutorial 3_ Visualizaciones.ipynb  Tutorial 4_ Estadística básica.ipynb
(+333 files in other folders)
