[project]
name = "curso-python"
version = "0.7.0"
description = "Curso-Taller de Análisis Estadístico con Python para ciencias de la salud y afines."
authors = [
    {name = "Christian Alejandro Delaflor Wagner"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bambi>=0.15.0",
    "ipywidgets>=8.1.7",
    "jupyter-book>=1.0.4.post1",
    "jupyterlab>=4.4.3",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.3",
    "numpyro>=0.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pingouin>=0.5.5",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinxext-opengraph>=0.11.0",
    "statsmodels>=0.14.4",
]
